chore: dockerized deployment runbook

--- a/server/data/tasks.json
+++ b/server/data/tasks.json
@@ -1,16 +1,30 @@
 [
   {
+    "id": "6e5754ca-98fc-4235-8d59-30e26449f907",
+    "title": "Shower",
+    "dueDate": "2025-12-15T00:00:00.000Z",
+    "done": false,
+    "createdAt": "2025-12-14T08:03:59.923Z"
+  },
+  {
+    "id": "a1ac6aaa-53d9-4087-959a-3d37a4894089",
+    "title": "deploy",
+    "dueDate": "2025-12-14T00:00:00.000Z",
+    "done": false,
+    "createdAt": "2025-12-13T19:12:51.333Z"
+  },
+  {
+    "id": "aa335092-bae4-43db-8ca7-3eb324419c06",
+    "title": "Cook",
+    "dueDate": "2025-12-15T00:00:00.000Z",
+    "done": true,
+    "createdAt": "2025-12-13T19:11:50.921Z"
+  },
+  {
     "id": "366425e8-8c49-4e28-bc85-86fcf4fdfbcd",
     "title": "test",
     "dueDate": "2025-12-13T00:00:00.000Z",
     "done": true,
     "createdAt": "2025-12-13T17:19:27.248Z"
-  },
-  {
-    "id": "22c768ff-20e7-4e5b-9392-910504dc3f30",
-    "title": "Deploy",
-    "dueDate": "2025-12-14T00:00:00.000Z",
-    "done": false,
-    "createdAt": "2025-12-13T16:48:24.847Z"
   }
 ]
