--- a/server/data/tasks.json
+++ b/server/data/tasks.json
@@ -1,5 +1,12 @@
 [
   {
+    "id": "50d10378-38af-45a9-93ae-c4f4c20cbf89",
+    "title": "get domain name",
+    "dueDate": "2025-12-16T00:00:00.000Z",
+    "done": false,
+    "createdAt": "2025-12-15T10:01:32.074Z"
+  },
+  {
     "id": "6e5754ca-98fc-4235-8d59-30e26449f907",
     "title": "Shower",
     "dueDate": "2025-12-15T00:00:00.000Z",
@@ -10,7 +17,7 @@
     "id": "a1ac6aaa-53d9-4087-959a-3d37a4894089",
     "title": "deploy",
     "dueDate": "2025-12-14T00:00:00.000Z",
-    "done": false,
+    "done": true,
     "createdAt": "2025-12-13T19:12:51.333Z"
   },
   {
