expose backend from frontend only

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   server:
     build: ./server
-    ports:
-      - "3001:3001"
     volumes:
       - ./server/data:/app/data
     restart: unless-stopped
@@ -12,3 +10,5 @@ services:
     ports:
       - "8080:80"
     restart: unless-stopped
+    volumes:
+      - ./client/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
