--- a/server/data/tasks.json
+++ b/server/data/tasks.json
@@ -1,5 +1,12 @@
 [
   {
+    "id": "49cf09c9-9ef1-47f8-8f03-e98b693be185",
+    "title": "Study interview",
+    "dueDate": "2025-12-18T00:00:00.000Z",
+    "done": false,
+    "createdAt": "2025-12-18T06:41:17.381Z"
+  },
+  {
     "id": "50d10378-38af-45a9-93ae-c4f4c20cbf89",
     "title": "get domain name",
     "dueDate": "2025-12-16T00:00:00.000Z",
@@ -10,7 +17,7 @@
     "id": "6e5754ca-98fc-4235-8d59-30e26449f907",
     "title": "Shower",
     "dueDate": "2025-12-15T00:00:00.000Z",
-    "done": false,
+    "done": true,
     "createdAt": "2025-12-14T08:03:59.923Z"
   },
   {
