--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ services:
     volumes:
       - ./server/data:/app/data
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3001/api/tasks"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
 
   client:
     build: ./client
@@ -12,3 +17,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./client/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost/"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
