--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,11 @@ services:
       - ./server/data:/app/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:3001/api/tasks"]
+      test: ["CMD-SHELL", "wget -q -O- http://127.0.0.1:3001/tasks > /dev/null || exit 1"]
       interval: 10s
       timeout: 3s
       retries: 5
+      start_period: 10s
     logging:
       driver: "json-file"
       options:
@@ -24,10 +25,11 @@ services:
     volumes:
       - ./client/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost/"]
+      test: ["CMD-SHELL", "wget -q -O- http://127.0.0.1/ > /dev/null || exit 1"]
       interval: 10s
       timeout: 3s
       retries: 5
+      start_period: 10s
     logging:
       driver: "json-file"
       options:
